Adds file for evaluation

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2,63 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from data_parser import DataParser\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "DATA_DIR = 'data/askUbuntuData/metaExtract/'\n",
-    "OUTPUT_DIR = \"output/\"\n",
-    "if not os.path.exists(DATA_DIR+OUTPUT_DIR):\n",
-    "    os.mkdir(DATA_DIR+OUTPUT_DIR)\n",
-    "TAGS_FILE = 'Tags.xml'\n",
-    "POSTS_FILE = 'Posts.xml'"
+    "from data_parser import DataParser\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import json\n",
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "from scipy import sparse"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "dp = DataParser()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#tags_list = dp.get_tags(DATA_DIR+TAGS_FILE,10,DATA_DIR+OUTPUT_DIR+\"tags_json.json\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#posts = dp.get_posts_and_tags(DATA_DIR+POSTS_FILE,DATA_DIR+OUTPUT_DIR+\"posts_json.json\")"
+    "DATA_DIR = 'data/unixData/'\n",
+    "OUTPUT_DIR = \"output/\"\n",
+    "if not os.path.exists(DATA_DIR+OUTPUT_DIR):\n",
+    "    os.mkdir(DATA_DIR+OUTPUT_DIR)\n",
+    "TAGS_FILE = 'Tags.xml'\n",
+    "POSTS_FILE = 'Posts.xml'"
    ]
   },
   {
@@ -69,13 +38,37 @@
    },
    "outputs": [],
    "source": [
-    "import json"
+    "dp = DataParser()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#tags_list = dp.get_tags(DATA_DIR+TAGS_FILE,10,DATA_DIR+OUTPUT_DIR+\"tags_json.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#posts = dp.get_posts_and_tags(DATA_DIR+POSTS_FILE,DATA_DIR+OUTPUT_DIR+\"posts_json_186k.json\",max_ques=186000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#with open(DATA_DIR+OUTPUT_DIR+\"tags_json.json\") as f:\n",
@@ -85,38 +78,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#with open(DATA_DIR+OUTPUT_DIR+\"posts_json.json\") as f:\n",
-    "#    posts = json.load(f)"
+    "#    posts = json.load(f)\n",
+    "#len(posts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "#dp.build_vocab(DATA_DIR+OUTPUT_DIR+\"posts_json.json\",8,DATA_DIR+OUTPUT_DIR+\"vocab_json_8.json\")"
+    "#dp.build_vocab(DATA_DIR+OUTPUT_DIR+\"posts_json_186k.json\",58,DATA_DIR+OUTPUT_DIR+\"vocab_json_58.json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "'''\n",
-    "cts = []\n",
-    "for thresh in range(1,11):\n",
-    "    ct = 0\n",
-    "    for x in sorted_vocab:\n",
-    "        if x[1] > thresh:\n",
-    "            break\n",
-    "        ct += 1\n",
-    "    cts.append(ct)\n",
-    "'''"
+    "#vocab = dp.build_vocab(DATA_DIR+OUTPUT_DIR+\"posts_json.json\")\n",
+    "#sorted_vocab = sorted(vocab.items(),key=lambda x: x[1],reverse=True)\n",
+    "#sorted_vocab[15000]"
    ]
   },
   {
@@ -124,10 +117,152 @@
    "metadata": {},
    "source": [
     "## MinCounts\n",
-    "AskUbuntu - 10<br>\n",
-    "Unix - 8<br>\n",
-    "Dba - 4<br>\n",
-    "SuperUser - 8"
+    "AskUbuntu - 46<br>\n",
+    "Unix - 25<br>\n",
+    "Dba - 15<br>\n",
+    "SuperUser - 58"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "dp.bag_of_words(DATA_DIR+OUTPUT_DIR+\"vocab_json_58.json\",DATA_DIR+OUTPUT_DIR+\"posts_json_186k.json\",\\\n",
+    "                DATA_DIR+OUTPUT_DIR+\"bow_filter.npy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#with open(DATA_DIR+OUTPUT_DIR+\"vocab_json_58.json\") as f:\n",
+    "#    vocab = json.load(f)\n",
+    "#len(vocab)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tfidfTransformer = TfidfTransformer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "bow = np.load(DATA_DIR+OUTPUT_DIR+\"bow_filter.npy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tfidf_data = tfidfTransformer.fit_transform(bow)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tfidf_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.save(DATA_DIR+OUTPUT_DIR+\"tfifdf_transformed.npy\",tfidf_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "bow = np.load(DATA_DIR+OUTPUT_DIR+\"bow_filter.npy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sp = sparse.csr_matrix(bow)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.save(DATA_DIR+OUTPUT_DIR+\"bow_sparse.npy\",sp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tags_one_hot = dp.get_tags_one_hot(DATA_DIR+OUTPUT_DIR+\"tags_json.json\",DATA_DIR+OUTPUT_DIR+\"posts_json_46k.json\",\\\n",
+    "                                   DATA_DIR+OUTPUT_DIR+\"tags_one_hot_sparse.npz\",to_sparse=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(DATA_DIR+OUTPUT_DIR+\"tags_json.json\") as f:\n",
+    "            tags_list = json.load(f)"
    ]
   },
   {
@@ -135,29 +270,49 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "bow = dp.bag_of_words(DATA_DIR+OUTPUT_DIR+\"vocab_json_10.json\",DATA_DIR+OUTPUT_DIR+\"posts_json.json\",DATA_DIR+OUTPUT_DIR+\"bow.npy\")"
+    "sp = sparse.load_npz(DATA_DIR+OUTPUT_DIR+\"tags_one_hot_sparse.npz\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "den = sp.todense()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(4964, 78098)"
+       "matrix([[0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        ...,\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.],\n",
+       "        [0., 0., 0., ..., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "bow.shape"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
